--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <!-- GEAR -->
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -50 400 200">
-	<g></g>
+	<g class="gear">
 	<circle class="gear-bg" fill="#39ADD1" cx="200" cy="50" r="90"></circle>
 	<path class="gear-icon" fill="#FFFFFF" d="M231.9,10.9c-1.8-0.6-3.6-0.6-5.1,0.3L216.2,17c-1.5-0.9-3-1.2-4.2-1.8l-3.1-11.5
 		c-0.6-1.8-1.8-3-3.3-3.9c-1.8-0.6-3.3-0.9-5.1-0.9c-1.8,0-3.3,0.3-5.1,0.9c-0.9,0.3-1.2,0.6-1.8,1.2s-1.2,1.8-1.5,2.7l-3,11.5
