--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <!-- HAMMER -->
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -50 400 200">
-	<g>
+	<g class="hammer">
 		<circle class="hammer-bg" fill="#FFD466" cx="200" cy="50" r="90"></circle>
 		<path class="hammer-icon" fill="#FFFFFF" d="M262,32.9l-6.7-6.9c-1.4-1.4-3.6-1.4-5-0.1l-2.8,2.8l-14.6-15c-7-7.2-20.3-18.5-30.1-16.4
 			c-1.6,0.3-5.6,3.1-5.6,3.1l19,19.5l-26.3,25.6l-1.5-1.6c-1.4-1.4-3.6-1.4-5-0.1l-39.3,38.3c-1.4,1.4-1.4,3.6-0.1,5l14.4,14.8
